issue #8788 Quotes in inline code confuse Markdown parser

--- a/testing/110_backticks.dox
+++ b/testing/110_backticks.dox
@@ -1,4 +1,5 @@
 // objective: test various forms of backtick handling
+// config: MARKDOWN_STRICT = NO
 // check: indexpage.xml
 /** @mainpage
 Text with `single` backtick.  
