docs(doxywizard): add optional parameter, remove redundant text

--- a/doc/doxywizard.1
+++ b/doc/doxywizard.1
@@ -3,11 +3,9 @@
 Doxywizard \- a tool to configure and run Doxygen on your source files
 .SH SYNOPSIS
 .B doxywizard
+.RI [Doxyfile]
 .SH DESCRIPTION
 Doxywizard is an interactive frontend to the Doxygen tool to configure
 and run Doxygen on your source files.
-.PP
-You can optionally pass the name of a configuration file as the first argument
-to load it at startup.
 .SH SEE ALSO
 doxygen(1)
