docs(install): correct grammar, fix typos

--- a/doc/install.dox
+++ b/doc/install.dox
@@ -91,7 +91,7 @@ Compilation is now done by performing the following steps:
         cmake -G "Unix Makefiles" ..
 
     <code>cmake</code> tries to determine the platform you use, and will look
-    for the requires tools. It will report if something is missing.
+    for the required tools. It will report if something is missing.
 
     If you have Qt-5.14 or higher installed and want to build the GUI
     front-end, you should enable it as follows:
@@ -190,7 +190,7 @@ These packages are needed during the compilation process.
 
 Download Doxygen's source tarball and put it somewhere (e.g. use <code>c:\\tools</code>)
 
-Now start a visual studio native command shell (for either x86 or x64) and type
+Now start a Visual Studio native command shell (for either x86 or x64) and type
 \verbatim
 cd c:\tools
 tar zxvf doxygen-x.y.z.src.tar.gz
@@ -207,7 +207,7 @@ mkdir build
 cd build
 cmake -G "Visual Studio 14 2015" ..
 \endverbatim
-This will create a project file then can be opened in Visual Studio.
+This will create a project file that can be opened in Visual Studio.
 
 If you prefer compiling from the command prompt you can use the following instead:
 \verbatim
@@ -236,7 +236,7 @@ of the GraphViz package to render nicer diagrams, see the
 If you want to produce compressed HTML files (see \ref
 cfg_generate_htmlhelp "GENERATE_HTMLHELP") in the configuration file, then
 you need the Microsoft HTML help workshop.
-In the beginning of 2021 Microsoft took the original page, with a.o. the download links,
+At the beginning of 2021, Microsoft took the original page, with a.o. the download links,
 offline the HTML help workshop was already many years in maintenance mode). 
 You can download the HTML help workshop from the web archives at
 <a href="http://web.archive.org/web/20160201063255/http://download.microsoft.com/download/0/A/9/0A939EF6-E31C-430F-A3DF-DFAE7960D564/htmlhelp.exe">Installation executable</a>.
