--- a/doc/markdown.dox
+++ b/doc/markdown.dox
@@ -655,7 +655,7 @@ stars or tildes, so the following will appear as-is:
 
 Furthermore, a `*` or `_` only starts an emphasis  and a `~` only starts a strikethrough if
 - it is followed by an alphanumerical character, and
-- it is preceded by a space, newline, or one the following characters `<{([,:;`
+- it is preceded by a space, newline, or one of the following characters `<{([,:;`
 
 An emphasis or a strikethrough ends if
 - it is not followed by an alphanumerical character, and
