--- a/doc/doxygen.1
+++ b/doc/doxygen.1
@@ -3,32 +3,32 @@
 Doxygen \- documentation system for various programming languages
 .SH DESCRIPTION
 Doxygen is a documentation system for C++, C, Java, Objective-C, IDL
-(Corba and Microsoft flavors), Fortran, Python, VHDL and to some extent PHP, C#, and D.
+(CORBA and Microsoft flavors), Fortran, Python, VHDL and to some extent PHP, C#, and D.
 .PP
-You can use Doxygen in a number of ways:
+You can use Doxygen in several ways:
 .TP
-1) Use Doxygen to generate a template configuration file*:
+1) Generate a template configuration file*:
 .IP
 doxygen [-s] \fB\-g\fR [configName]
 .TP
-2) Use Doxygen to update an old configuration file*:
+2) Update an existing configuration file*:
 .IP
 doxygen [-s] \fB\-u\fR [configName]
 .TP
-3) Use Doxygen to generate documentation using an existing configuration file*:
+3) Generate documentation using an existing configuration file*:
 .IP
 doxygen [configName]
 .TP
-4) Use Doxygen to generate a template file controlling the layout of the generated documentation:
+4) Generate a template file that controls the layout of the generated documentation:
 .IP
 doxygen \fB\-l\fR [layoutFileName]
 .IP
 .RS 0
-   In case layoutFileName is omitted DoxygenLayout.xml will be used as filename.
-   If - is used for layoutFileName Doxygen will write to standard output.
+   If layoutFileName is omitted, DoxygenLayout.xml will be used as the filename.
+   If - is used for layoutFileName, Doxygen writes to standard output.
 .RE
 .TP
-5) Use Doxygen to generate a template style sheet file for RTF, HTML or Latex.
+5) Generate a template style sheet file for RTF, HTML or LaTeX:
 .IP
 RTF:
 doxygen \fB\-w\fR rtf styleSheetFile
@@ -36,9 +36,10 @@ doxygen \fB\-w\fR rtf styleSheetFile
 HTML:
 doxygen \fB\-w\fR html headerFile footerFile styleSheetFile [configFile]
 .IP
-LaTeX: doxygen \fB\-w\fR latex headerFile footerFile styleSheetFile [configFile]
+LaTeX:
+doxygen \fB\-w\fR latex headerFile footerFile styleSheetFile [configFile]
 .TP
-6) Use Doxygen to generate an rtf extensions file
+6) Generate an RTF extensions file:
 .IP
 RTF:
 doxygen \fB\-e\fR rtf extensionsFile
@@ -47,18 +48,18 @@ doxygen \fB\-e\fR rtf extensionsFile
    If - is used for extensionsFile Doxygen will write to standard output.
 .RE
 .TP
-7) Use Doxygen to compare the used configuration file with the template configuration file
+7) Compare the used configuration file with the template configuration file:
 .IP
 doxygen \fB\-x\fR [configFile]
 .TP
-   Use Doxygen to compare the used configuration file with the template configuration file
+   Compare the used configuration file with the template configuration file
 .RS 0
-   without replacing the environment variables or CMake type replacement variables
+   without replacing the environment variables or CMake type replacement variables:
 .RE
 .IP
 doxygen \fB\-x_noenv\fR [configFile]
 .TP
-8) Use Doxygen to show a list of built-in emojis.
+8) Show a list of built-in emojis.
 .IP
 doxygen \fB\-f\fR emoji outputFileName
 .IP
@@ -67,9 +68,9 @@ doxygen \fB\-f\fR emoji outputFileName
 .RE
 .PP
 .RS 0
-*) If \fB\-s\fR is specified the comments of the configuration items in the config file will be omitted.
-   If configName is omitted 'Doxyfile' will be used as a default.
-   If - is used for configFile Doxygen will write / read the configuration to /from standard output / input.
+*) If \fB\-s\fR is specified, the comments of the configuration items in the config file will be omitted.
+   If configName is omitted, 'Doxyfile' will be used by default.
+   If - is used for configFile, Doxygen will write / read the configuration to / from standard output / input.
 .RE
 .PP
 If \fB\-q\fR is used for a Doxygen documentation run, Doxygen will see this as if QUIET=YES has been set.
