docs(man): correct grammar in doxyindexer(1)

--- a/doc/doxyindexer.1
+++ b/doc/doxyindexer.1
@@ -11,7 +11,7 @@ doxysearch.cgi as a CGI program to search the data indexed by doxyindexer.
 .SH OPTIONS
 .TP
 \fB\-o\fR <output_dir>
-The directory where to write the doxysearch.db to. 
-If omitted the current directory is used.
+The directory where doxysearch.db will be written.
+If omitted, the current directory is used.
 .SH SEE ALSO
 doxygen(1), doxysearch(1), doxywizard(1).
