Fixes formatting in complex table example

--- a/doc/tables.dox
+++ b/doc/tables.dox
@@ -43,7 +43,7 @@ Here is an example of a complex table:
 <tr><td>cell row=5,col=1              <td colspan="2">cell row=5,col=2+3
 <tr><td colspan="2" rowspan="2">cell row=6+7,col=1+2      <td>cell row=6,col=3
 <tr>                                                      <td>cell row=7,col=3
-<tr><td>cell row=8,col=1              <td>cell row=8,col=2\n
+<tr><td>cell row=8,col=1              <td>cell row=8,col=2
   <table>
     <tr><td>Inner cell row=1,col=1<td>Inner cell row=1,col=2
     <tr><td>Inner cell row=2,col=1<td>Inner cell row=2,col=2
